<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#E6E6E6"
    android:padding="16dp">

    <!-- TOP BAR -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="12dp">

        <!-- Back / Close -->
        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:tint="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/menu"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- PROFILE -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="12dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:src="@drawable/ic_farmer_modern"
            android:tint="#000000"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menu_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User Name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_logged_in"
                android:textSize="14sp"
                android:textColor="#666"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"/>

    <!-- MENU ITEMS -->
    <TextView
        android:id="@+id/menu_supplier"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/supplier_section"
        android:textSize="16sp"
        android:padding="14dp"/>

    <TextView
        android:id="@+id/menu_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_factory"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="14dp"/>

    <!-- LANGUAGE SWITCH -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="14dp">

        <TextView
            android:textColor="@color/black"
            android:id="@+id/tv_language_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"/>

        <Switch
            android:id="@+id/switch_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#DB0000" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"/>

    <TextView
        android:id="@+id/menu_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="16sp"
        android:textColor="#D32F2F"
        android:padding="14dp"/>

</LinearLayout>
